# Roo-Code

./: .env.sample  .gitignore  .intentignore  .jabberwockmodes  .mcp_endpoint  .rgignore  .rooignore  .roomodes  .tool-versions  AGENT.md  AGENTS.md  API_CONFIG_README.md  ARCHITECTURE_NOTES.md  Architecture.md  CHANGELOG.md  CHAT_MESSAGE_FIX_SUMMARY.md  CLAUDE.md  CODEBASE_INDEXING_BRANCH_ISOLATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECOUPLING_ANALYSIS.md  DEVELOPMENT.md  Enforcing MCP Todo Task Execution.md  F5_TROUBLESHOOTING.md  Fixing Interactive MCP UI Rendering.md  GITHUB_FEATURE_REQUEST_FORM.md  GITHUB_ISSUE.md  HOOK_SYSTEM_SPEC.md  HOOK_SYSTEM_SUMMARY.md  IMPLEMENTATION-REPORT.md  IMPLEMENTATION_SUMMARY.md  INTERIM_REPORT.md  INVESTIGATION-ROO-419.md  LICENSE  PHASE_1_1_TEST.md  PHASE_1_FIXES.md  PHASE_1_INTEGRATION_TEST.md  PHASE_3_COMPLETION_REPORT.md  PHASE_3_IMPLEMENTATION.md  PHASE_3_INTEGRATION_GUIDE.md  (+71 more)
.antigravity/: mcp.json
.changeset/: README.md  add-zai-glm-4-7.md  azure-ai-sdk-migration.md  cerebras-conservative-max-tokens.md  claude-opus-4-6-support.md  clever-tools-alias.md  config.json  context-condensation-providers.md  delete-queued-message-ipc.md  eleven-crews-love.md  fix-duplicate-mcp-tools.md  fix-gemini-3-thinking-level.md  fix-mcp-nested-schema.md  fix-mcp-tools-chatgpt.md  fix-message-editor-autosave-draft.md  fix-native-unknown-tool.md  fix-vertex-global-region.md  groq-native-tools.md  (+29 more)
native/file-processor/: Cargo.toml
native/file-processor/src/: lib.rs
native/image-processor/: Cargo.toml
native/image-processor/src/: lib.rs
(+4187 files in other folders)
