[package]
name = "file-processor"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Neon for Node.js bindings
neon = { version = "1.0", default-features = false, features = ["napi-6"] }

# File processing
memmap2 = "0.9"
regex = "1.10"
rayon = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true